apps/home/syncserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: syncserver
  name: syncserver
  namespace: syncserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncserver
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: syncserver
    spec:
      containers:
      - image: mozilla/syncserver:latest
        name: syncserver
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - name: database
          mountPath: /home/app/
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: syncserver
status: {}
