apps/home/syncserver/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: syncserver
  name: syncserver
  namespace: syncserver
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: syncserver
status:
  loadBalancer: {}
