apps/home/syncserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncserver
  namespace: syncserver
spec:
  rules:
  - host: syncserver.home.pekware.club
    http:
      paths:
      - backend:
          service:
            name: syncserver
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - syncserver.home.pekware.club
